; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_dbus-manager.c_method_start_unit_generic.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_dbus-manager.c_method_start_unit_generic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i32, i32*)* @method_start_unit_generic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @method_start_unit_generic(i32* %0, i32* %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = call i32 @assert(i32* %15)
  %17 = load i32*, i32** %8, align 8
  %18 = call i32 @assert(i32* %17)
  %19 = load i32*, i32** %7, align 8
  %20 = call i32 @sd_bus_message_read(i32* %19, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8** %12)
  store i32 %20, i32* %14, align 4
  %21 = load i32, i32* %14, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %5
  %24 = load i32, i32* %14, align 4
  store i32 %24, i32* %6, align 4
  br label %41

25:                                               ; preds = %5
  %26 = load i32*, i32** %8, align 8
  %27 = load i8*, i8** %12, align 8
  %28 = load i32*, i32** %11, align 8
  %29 = call i32 @manager_load_unit(i32* %26, i8* %27, i32* null, i32* %28, i32** %13)
  store i32 %29, i32* %14, align 4
  %30 = load i32, i32* %14, align 4
  %31 = icmp slt i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %25
  %33 = load i32, i32* %14, align 4
  store i32 %33, i32* %6, align 4
  br label %41

34:                                               ; preds = %25
  %35 = load i32*, i32** %7, align 8
  %36 = load i32*, i32** %13, align 8
  %37 = load i32, i32* %9, align 4
  %38 = load i32, i32* %10, align 4
  %39 = load i32*, i32** %11, align 8
  %40 = call i32 @bus_unit_method_start_generic(i32* %35, i32* %36, i32 %37, i32 %38, i32* %39)
  store i32 %40, i32* %6, align 4
  br label %41

41:                                               ; preds = %34, %32, %23
  %42 = load i32, i32* %6, align 4
  ret i32 %42
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @sd_bus_message_read(i32*, i8*, i8**) #1

declare dso_local i32 @manager_load_unit(i32*, i8*, i32*, i32*, i32**) #1

declare dso_local i32 @bus_unit_method_start_generic(i32*, i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
